[package]
name = "random-number"
version = "0.1.0"
authors = ["Ravin Singh D <ravin@getcloudcherry.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
opt-level = "s"
